  O Abbreviate special dates like this: ABT 1917 > ~1917   BEF/TO 1917 > -1917   AFT/FROM 1917 > 1917-
  O some.ged.properties files should be read by CC from the same directory as the .ged-file (and saved there, too)
  O Table view for families should list all children, not just first child.
  O Merge and Verify should be reports
  O Improved windows placement (applet layouts views tree NW, table NE, overview S)
  O EditView should show button for 'Create New Individual' when no individual set
    (works nicely when the user has created an empty tree)
  O View-Menu in ControlCenter to open up views
  O Use colors to distinguish different events in TimelineView

1.9 - Aug xx 2002

  N User can choose Look&Feel (with Skin/Theme support) through AboutDialog (download genj_lnf-x.y.zip to enable)
  N A new PropertySex is now unset when created - the user has to choose male/female eventually
  N Special entities REPOSITORY, SOURCE, SUBMITTER are now supported internally
  N NavigatorView
  N Dates are localized in TableView, TimelineView and TreeView now
  B GedcomWriter now writes correct version information
  N A new About window has been added, implementing Welcome, Authors, Feedback and Copyright tabbed panes
  B ReportGedcomStatistics doesn't track death-place anymore for people that haven't died yet
  B Windows (View, Overview) are never places outside of the visible screen
  I ReportAppletDetails changed output format of generated HTML files and now contains hyperlinks to families and individuals.  Hyperlinks for individuals are keyed by name rather than Gedcom ID.

1.8 - Apr 18 2002

  C Abbreviated dates show month name (JAN), skip FROM/BET/AND/..., use '-' and are on one line
  I ant descriptor now builds distributions for languages EN,DE,FR and IT
  C Changed the way that IDs are created for new entities (incremental)
  C Help menu is now offset to the right
  B Bug in TreeView's content pane - now does repaint() after invalidate() after structureChanged